<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/img_avatar"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@+id/img_avatar"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/name_product"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_name"
        android:layout_below="@+id/txt_name"
        android:layout_marginEnd="7dp"
        android:fontFamily="@font/roboto"
        android:text="@string/count_reports"
        android:textColor="@color/dark_gray"
        android:textSize="11sp" />

    <TextView
        android:id="@+id/txt_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/txt_name"
        android:layout_below="@+id/txt_status"
        android:layout_marginEnd="7dp"
        android:fontFamily="@font/roboto"
        android:text="@string/refreshed"
        android:textColor="@color/dark_gray"
        android:textSize="11sp" />

</RelativeLayout>